--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,27 +1,28 @@
-version: '{branch}-{build}'
-branches:
-  only:
-  - master
+version: "{branch}-{build}"
 environment:
-  PY_PYTHON: 2.7-32
+ PY_PYTHON: 2.7-32
 install:
-- cmd: >-
-    py -m pip install --egg scons
+  - py -m pip install markdown
+  
 
-    py -m pip install markdown
 build_script:
-- cmd: scons
+  - PY scons.py
+  - PY scons.py pot
+
 artifacts:
-- path: '*.nvda-addon'
-  name: ADDON
-  type: WebDeployPackage
+  - path: '*.nvda-addon'
+    name: addon
+    type: application/x-nvda-addon
+  - path: '*.pot'
+    type: application/x-pot
 deploy:
-- provider: GitHub
   release: $(APPVEYOR_REPO_TAG_NAME)
-  draft: true
   description: $(APPVEYOR_REPO_TAG_NAME)
+  provider: GitHub
   auth_token:
     secure: t7odj5xa8p2sujc5s9wn
   artifact: addon
+  draft: false
+  prerelease: false
   on:
-    appveyor_repo_tag: true
+    appveyor_repo_tag: true        # deploy on tag push only
