--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,28 +1,26 @@
-version: "{branch}-{build}"
+version: '{branch}-{build}'
+branches:
+  only:
+  - master
 environment:
- PY_PYTHON: 2.7-32
+  PY_PYTHON: 2.7-32
 install:
-  - py -m pip install markdown
-  
+- cmd: >-
+    py -m pip install --egg scons
 
+    py -m pip install markdown
 build_script:
-  - PY scons.py
-  - PY scons.py pot
-
+- cmd: scons
 artifacts:
-  - path: '*.nvda-addon'
-    name: addon
-    type: application/x-nvda-addon
-  - path: '*.pot'
-    type: application/x-pot
+- path: '*.nvda-addon'
+  name: ADDON
+  type: WebDeployPackage
 deploy:
+- provider: GitHub
   release: $(APPVEYOR_REPO_TAG_NAME)
   description: $(APPVEYOR_REPO_TAG_NAME)
-  provider: GitHub
   auth_token:
-    secure: t7odj5xa8p2sujc5s9wn
+    secure:  t7odj5xa8p2sujc5s9wn
   artifact: addon
-  draft: false
-  prerelease: false
   on:
-    appveyor_repo_tag: true        # deploy on tag push only
+    appveyor_repo_tag: true
