--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,15 @@ install:
     py -m pip install markdown
 build_script:
 - cmd: scons
+
+artifacts:
+- path: '*.nvda-addon'
+  name: addon
+  type: WebDeployPackage
+  
 before_deploy:
 - ps: $env:REPO_NAME =  $env:APPVEYOR_REPO_NAME.Substring($env:APPVEYOR_REPO_NAME.IndexOf('/') + 1)
+
 deploy:
 - provider: GitHub
   tag: $(APPVEYOR_REPO_TAG_NAME)
