--- a/sconstruct
+++ b/sconstruct
@@ -15,7 +15,12 @@ import buildVars
 def md2html(source, dest):
 	import markdown
 	lang = os.path.basename(os.path.dirname(source)).replace('_', '-')
-	title="{addonSummary} {addonVersion}".format(addonSummary=buildVars.addon_info["addon_summary"], addonVersion=buildVars.addon_info["addon_version"])
+	localeLang = os.path.basename(os.path.dirname(source))
+	try:
+		_ = gettext.translation("nvda", localedir=os.path.join("addon", "locale"), languages=[localeLang]).ugettext
+		title=u"{0}".format(_(buildVars.addon_info["addon_summary"]))
+	except:
+		title="{0}".format(buildVars.addon_info["addon_summary"]) 
 	headerDic = {
 		"[[!meta title=\"": "# ",
 		"\"]]": " #",
@@ -39,20 +44,12 @@ def md2html(source, dest):
 		f.write(htmlText)
 		f.write("\n</body>\n</html>")
 
-def mdTool(env):
-	mdAction=env.Action(
-		lambda target,source,env: md2html(source[0].path, target[0].path),
-		lambda target,source,env: 'Generating %s'%target[0],
-	)
-	mdBuilder=env.Builder(
-		action=mdAction,
-		suffix='.html',
-		src_suffix='.md',
-	)
-	env['BUILDERS']['markdown']=mdBuilder
+def generateHelpFiles (source, target, env, for_signature):
+	action = env.Action(lambda target, source, env : md2html(source[0].abspath, target[0].abspath) and None,
+	lambda target, source, env : "Generating %s" % target[0])
+	return action
 
-
-env = Environment(ENV=os.environ, tools=['gettexttool', mdTool])
+env = Environment(ENV=os.environ, tools=['gettexttool'])
 env.Append(**buildVars.addon_info)
 
 addonFile = env.File("${addon_name}-${addon_version}.nvda-addon")
@@ -76,6 +73,9 @@ def translatedManifestGenerator(target, source, env, for_signature):
 	return action
 
 env['BUILDERS']['NVDAAddon'] = Builder(generator=addonGenerator)
+env['BUILDERS']['markdown']=Builder(generator = generateHelpFiles,
+	suffix='.html',
+	src_suffix='.md')
 env['BUILDERS']['NVDAManifest'] = Builder(generator=manifestGenerator)
 env['BUILDERS']['NVDATranslatedManifest'] = Builder(generator=translatedManifestGenerator)
 
@@ -128,27 +128,9 @@ def expandGlobs(files):
 
 addon = env.NVDAAddon(addonFile, env.Dir('addon'))
 
-langDirs = [f for f in env.Glob(os.path.join("addon", "locale", "*"))]
-
-#Allow all NVDA's gettext po files to be compiled in source/locale, and manifest files to be generated
-for dir in langDirs:
-	poFile = dir.File(os.path.join("LC_MESSAGES", "nvda.po"))
-	moFile=env.gettextMoFile(poFile)
-	env.Depends(moFile, poFile)
-	translatedManifest = env.NVDATranslatedManifest(dir.File("manifest.ini"), [moFile, os.path.join("manifest-translated.ini.tpl")])
-	env.Depends(translatedManifest, ["buildVars.py"])
-	env.Depends(addon, [translatedManifest, moFile])
-
 pythonFiles = expandGlobs(buildVars.pythonSources)
 for file in pythonFiles:
 	env.Depends(addon, file)
-
-#Convert markdown files to html
-createAddonHelp("addon") # We need at least doc in English and should enable the Help button for the add-on in Add-ons Manager
-for mdFile in env.Glob(os.path.join('addon', 'doc', '*', '*.md')):
-	htmlFile = env.markdown(mdFile)
-	env.Depends(htmlFile, mdFile)
-	env.Depends(addon, htmlFile)
 
 # Pot target
 i18nFiles = expandGlobs(buildVars.i18nSources)
@@ -171,4 +153,20 @@ manifest = env.NVDAManifest(os.path.join("addon", "manifest.ini"), os.path.join(
 env.Depends(manifest, "buildVars.py")
 
 env.Depends(addon, manifest)
+createAddonHelp("addon") # We need at least doc in English and should enable the Help button for the add-on in Add-ons Manager
+langDirs = [f for f in env.Glob(os.path.join("addon", "locale", "*"))]
+
+#Allow all NVDA's gettext po files to be compiled in source/locale, and manifest files to be generated
+for dir in langDirs:
+	poFile = dir.File(os.path.join("LC_MESSAGES", "nvda.po"))
+	moFile=env.gettextMoFile(poFile)
+	env.Depends(moFile, poFile)
+	translatedManifest = env.NVDATranslatedManifest(dir.File("manifest.ini"), [moFile, os.path.join("manifest-translated.ini.tpl")])
+	env.Depends(translatedManifest, ["buildVars.py"])
+	env.Depends(addon, [translatedManifest, moFile])
+	#Convert markdown files to html
+	for mdFile in env.Glob(os.path.join('addon', 'doc', '*', '*.md')):
+		htmlFile = env.markdown(mdFile)
+		env.Depends(htmlFile, [mdFile, moFile])
+		env.Depends(addon, htmlFile)
 env.Default(addon)
