--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,30 +1,30 @@
 version: '{branch}-{build}'
 environment:
-  PY_PYTHON: 2.7-32
+  PY_PYTHON: 3.7-32
 install:
 - cmd: >-
-    python -m pip install wheel
+    set PATH=C:\Python37;C:\Python37\Scripts;%PATH%
 
-    py -m pip install scons
+    python -m pip install -U pip
 
-    py -m pip install markdown
+    pip install wheel
+    
+    pip install scons
+
+    pip install markdown
 build_script:
 - cmd: scons
-
 artifacts:
 - path: '*.nvda-addon'
   name: addon
   type: WebDeployPackage
-  
 before_deploy:
 - ps: $env:REPO_NAME =  $env:APPVEYOR_REPO_NAME.Substring($env:APPVEYOR_REPO_NAME.IndexOf('/') + 1)
-
 deploy:
 - provider: GitHub
   tag: $(APPVEYOR_REPO_TAG_NAME)
   release: Release $(APPVEYOR_REPO_TAG_NAME)
   description: This is the release $(APPVEYOR_REPO_TAG_NAME) of the $(REPO_NAME) addon for the NVDA screen reader built and uploaded to GitHub using Appveyor.
-
   auth_token:
     secure: 3yxF2EQ/wfLKNEobcRfdNL6srjXjoMdRa/LSQ7z2PJNqOL3IEyiFtlnxxHeIQskH
   artifact: addon
