--- a/.github/workflows/testWithNVDA.yaml
+++ b/.github/workflows/testWithNVDA.yaml
@@ -2,8 +2,7 @@ name: Build and test NVDA add-on
 
 on:
   pull_request:
-    branches:
-      - master
+
 jobs:
 
   addon:
@@ -62,10 +61,10 @@ jobs:
     
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Set up Python 3.8 x86
+    - name: Set up Python 3.7 x86
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.7
         architecture: x86
     - name: Checkout NVDA
       uses: actions/checkout@v2
@@ -107,17 +106,5 @@ jobs:
         move *.pot tests\nvda.pot
         cd tests
         python checkPot.py nvda.pot > potResults.txt
+        type potResults.txt
         If (Select-String -Path potResults.txt -Pattern 'Message has no translator comment' -SimpleMatch) {exit 1}
-    - name: Comment on PR
-      uses: actions/github-script@v3
-      if: failure()
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          github.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: 'This PR has messages without comments for translators'
-          })
-          
