--- a/.github/workflows/automaticRelease.yaml
+++ b/.github/workflows/automaticRelease.yaml
@@ -24,18 +24,8 @@ jobs:
         pip install scons markdown
         sudo apt update
         sudo apt install gettext
-    - name: Add add-on version
-      run: |
-        import re
-        with open("buildVars.py", 'r+', encoding='utf-8') as f:
-          text = f.read()
-          text = re.sub(r"\"addon_version\" : .*?,", "\"addon_version\" : \"${{ github.sha }}\",", text)
-          f.seek(0)
-          f.write(text)
-          f.truncate()
-      shell: python 
     - name: Build
-      run: scons
+      run: scons version=${{ github.sha }}
     - name: Automatic release
       uses: marvinpinto/action-automatic-releases@latest
       with:
