--- a/.github/workflows/manualRelease.yaml
+++ b/.github/workflows/manualRelease.yaml
@@ -43,7 +43,7 @@ jobs:
     - name: Build add-on
       run: scons
     - name: Calculate sha256
-      run: sha256sum *.nvda-addon >> changelog.md
+      run: sha256sum *.nvda-addon >> sha256.txt
     - name: Release
       uses: softprops/action-gh-release@v1
       env:
@@ -52,5 +52,6 @@ jobs:
         tag_name: ${{ github.event.inputs.version }}
         files: |
           *.nvda-addon
-        body_path: changelog.md
-        prerelease: ${{ endsWith(github.event.inputs.version, '-dev') }}
+          sha256.txt
+        generate_release_notes: true
+        prerelease: ${{ endsWith(github.event.inputs.version, '.0') }}
