--- a/.github/workflows/manualRelease.yaml
+++ b/.github/workflows/manualRelease.yaml
@@ -7,15 +7,19 @@ on:
         description: 'Add-on version'
         required: true
         default: '0.0.0'
-
+      prerelease:
+        description: 'True if this is a prerelease'
+        type: boolean
+        required: false
+        default: false
 jobs:
   buildAndUpload:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: 3.8
     - name: Install dependencies
@@ -54,4 +58,4 @@ jobs:
           *.nvda-addon
           sha256.txt
         generate_release_notes: true
-        prerelease: ${{ endsWith(github.event.inputs.version, '.0') }}
+        prerelease: ${{ github.event.inputs.prerelease }}
